--- a/pom.xml
+++ b/pom.xml
@@ -100,6 +100,13 @@
             <artifactId>h2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>io.swagger</groupId>
+            <artifactId>swagger-codegen-maven-plugin</artifactId>
+            <version>2.4.31</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
