--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -4,3 +4,7 @@ spring.datasource.username=Admin
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto= update
+# default path: h2-console
+spring.h2.console.path=/h2-ui
