--- a/src/main/resources/book-keeper-api.yaml
+++ b/src/main/resources/book-keeper-api.yaml
@@ -52,6 +52,8 @@ paths:
       operationId: createCustomer
       tags:
         - customers
+      requestBody:
+        $ref: "#/components/requestBodies/customerBody"
       responses:
         201:
           description: Created customer
@@ -89,23 +91,36 @@ paths:
               schema:
                 $ref: "#/components/schemas/Error"
 components:
+  requestBodies:
+    customerBody:
+      description: A JSON object containing customer info
+      required: true
+      content:
+        application/json:
+          schema:
+            $ref: '#/components/schemas/Customer'
+
   schemas:
     Customer:
       required:
-        - id
-        - name
+        - firstName
+        - lastName
+        - phoneNumber
       properties:
         id:
-          type: integer
-          format: int64
-        name:
           type: string
-        tag:
+        firstname:
           type: string
+        lastName:
+          type: string
+        phoneNumber:
+          type: string
+
     Customers:
       type: array
       items:
         $ref: "#/components/schemas/Customer"
+
     Error:
       required:
         - code
