--- a/src/main/resources/application-local.properties
+++ b/src/main/resources/application-local.properties
@@ -1,8 +1,9 @@
-spring.datasource.url=jdbc:h2:file:./database
+spring.datasource.url=jdbc:h2:C:/Users/Henry/IdeaProjects/book-keeper/database
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=Admin
 spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+spring.jpa.properties.hibernate.default_schema=KEEPER
 spring.h2.console.enabled=true
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
